--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </main>
     <footer class="text-center mt-5">
       <small>
-        ©2021. Suanur Rashid. All rights reserved. Chattogram, Bangladesh.
+        ©2021. Suhanur Rashid. All rights reserved. Chattogram, Bangladesh.
       </small>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
